Convert images to NumPy array.

--- a/noteBook.ipynb
+++ b/noteBook.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the libraries\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "from numpy import asarray"
    ]
   },
   {
@@ -33,6 +34,17 @@
     "print(image.format)\n",
     "print(image.size)\n",
     "print(image.mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using NumPy module to Convert images to NumPy array\n",
+    "\n",
+    "numpydata = asarray('9662.jpg')"
    ]
   },
   {
