--- a/noteBook.ipynb
+++ b/noteBook.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the libraries\n",
+    "import numpy \n",
     "from PIL import Image\n",
     "from numpy import asarray"
    ]
@@ -38,13 +39,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Using NumPy module to Convert images to NumPy array\n",
     "\n",
-    "numpydata = asarray('9662.jpg')"
+    "numpydata = asarray(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# <class 'numpy.ndarray'>\n",
+    "print(type(numpydata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[254 255 255]\n",
+      "  [239 241 240]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 251 241]\n",
+      "  [255 252 249]\n",
+      "  [252 255 255]]\n",
+      "\n",
+      " [[249 249 249]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 252 247]\n",
+      "  [242 243 245]\n",
+      "  [248 255 255]]\n",
+      "\n",
+      " [[255 254 255]\n",
+      "  [255 254 255]\n",
+      "  [244 244 244]\n",
+      "  ...\n",
+      "  [255 254 250]\n",
+      "  [251 255 255]\n",
+      "  [237 248 254]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numpydata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('9662.jpg', dtype='<U8')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpydata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using numpy.array() function\n",
+    "np_img = numpy.array(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80, 60, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np_img.shape)"
    ]
   },
   {
